# bCore

./: Cargo.toml
crates/bsuite-core/: Cargo.toml
crates/bsuite-core/benches/: corpus_lookup.rs
crates/bsuite-core/src/: adapter_host_bind.rs  corpus.rs  error.rs  exit_code.rs  lib.rs  prompt_resolver.rs  transcript_writer.rs  upgrade_carrier.rs
crates/bsuite-core/src/adapter_host_bind/: binder.rs  binding.rs  context.rs  env_parse.rs  invocation.rs  mod.rs  package.rs  tag.rs
crates/bsuite-core/src/opacity_hook/: verify.rs
crates/bsuite-core/tests/: adapter_host_bind_contract.rs  adapter_host_bind_env.rs  adapter_host_bind_format.rs  corpus_signature_contract.rs  exit_code_contract.rs  exit_code_emitter_contract.rs  exit_code_emitter_json.rs  exit_code_emitter_plain.rs  exit_code_routing.rs  exit_code_stdout_primacy.rs  fixture_corpus_self_verify.rs  host_context_contract.rs  manifest_overlay_contract.rs  opacity_hook_contract.rs  opacity_tier_evidence_grammar.rs  opacity_verify_contract.rs  overlay_merge_contract.rs  overlay_path_resolution.rs  overlay_signature_contract.rs  overlay_toml_grammar.rs  prompt_resolver_corpus_lookup.rs  signed_manifest_grammar.rs  transcript_append_contract.rs  transcript_concurrency.rs  transcript_manifest.rs  transcript_path_resolution.rs  transcript_record_grammar.rs  transcript_retention.rs  transcript_writer_contract.rs  updater_apply_contract.rs  updater_check_contract.rs  upgrade_carrier_contract.rs
crates/bsuite-core/tests/common/: mod.rs
crates/bsuite-core/tests/fixtures/: tier_evidence_sample.toml
(+1 files in other folders)
